disable user-select

--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -99,6 +99,10 @@ textarea {
 
 html, body {
   height: 100%;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
 }
 
 #musicButton {
